--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
             <th>Price</th>
         </tr>
     </table>
-    <h3> Grand Total : <span id="total">0</span> </h3>
+<!--     <h3> Grand Total : <span id="total">0</span> </h3> -->
+	<h3 id="total">0</h3>
     <script src="script.js"></script>
 </body>
 
