--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <input id="item-name-input" type="text" placeholder="Item name here">
+<!--     <input id="item-name-input" type="text" placeholder="Item name here">
     <input id="item-price-input" type="number" placeholder="price here">
     <button id="add">Add</button>
 
@@ -19,8 +19,40 @@
             <th>Price</th>
         </tr>
     </table>
-<!--     <h3> Grand Total : <span id="total">0</span> </h3> -->
-	<h3 id="total">0</h3>
+	<h3> Grand Total : <span id="total">0</span> </h3>
+	<h3 id="total">0</h3> -->
+	<form action="#">
+      <label for="item-name-input">Name</label>
+      <input type="text" id="item-name-input" placeholder="Add items" required /><br /><br />
+ 
+      <label for="item-qty-input">Quantity</label>
+      <input type="number" id="item-qty-input" placeholder="2" required /><br /><br />
+ 
+      <label for="item-price-input">Price</label>
+      <input type="number" id="item-price-input" placeholder="₹ 100" required /><br /><br />
+ 
+      <button type="submit" id="add">Add</button>
+    </form>
+    <br /><br />
+ 
+    <table role="table" border="1px">
+      <thead role="rowgroup">
+        <tr role="row">
+          <th id="item" role="columnheader">Name</th>
+          <th id="price" role="columnheader">Price</th>
+          <th role="columnheader">Quantity</th>
+          <th role="columnheader">Total</th>
+        </tr>
+      </thead>
+ 
+      <tbody role="rowgroup"></tbody>
+    </table>
+    <br /><br />
+ 
+    <h3 id="total">Grand Total: ₹</h3>
+
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
     <script src="script.js"></script>
 </body>
 
