--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -52,8 +53,8 @@
     <h3 id="total">Grand Total: ₹</h3>
 
     <script type="text/javascript" src="./script.js"></script>
-  </body>
-    <script src="script.js"></script>
+<!--   </body>
+    <script src="script.js"></script> -->
 </body>
 
 </html>
