--- a/main.html
+++ b/main.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-	<link rel="stylesheet" href="styles.css" />
-</head>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-<!--     <input id="item-name-input" type="text" placeholder="Item name here">
-    <input id="item-price-input" type="number" placeholder="price here">
-    <button id="add">Add</button>
-
-    <table id="table">
-        <tr>
-            <th>Item </th>
-            <th>Price</th>
-        </tr>
-    </table>
-	<h3> Grand Total : <span id="total">0</span> </h3>
-	<h3 id="total">0</h3> -->
-	<form action="#">
+  <body>
+    <!-- the entire body must be written by student -->
+    <form action="#">
       <label for="item-name-input">Name</label>
       <input type="text" id="item-name-input" placeholder="Add items" required /><br /><br />
- 
+
       <label for="item-qty-input">Quantity</label>
       <input type="number" id="item-qty-input" placeholder="2" required /><br /><br />
- 
+
       <label for="item-price-input">Price</label>
       <input type="number" id="item-price-input" placeholder="₹ 100" required /><br /><br />
- 
+
       <button type="submit" id="add">Add</button>
     </form>
     <br /><br />
- 
+
     <table role="table" border="1px">
       <thead role="rowgroup">
         <tr role="row">
@@ -45,16 +30,12 @@
           <th role="columnheader">Total</th>
         </tr>
       </thead>
- 
+
       <tbody role="rowgroup"></tbody>
     </table>
     <br /><br />
- 
+
     <h3 id="total">Grand Total: ₹</h3>
-
     <script type="text/javascript" src="./script.js"></script>
-<!--   </body>
-    <script src="script.js"></script> -->
-</body>
-
+  </body>
 </html>
